--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "sass-loader": "^13.3.2",
     "serve": "^14.2.1",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
